--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
     <title>Whiskeymario's Item List</title>
     <script type="text/javascript">
-        const itemListURL = "https://raw.githubusercontent.com/insanityseanboy/item-list/master/StoreItems.json";
+        const itemListURL = "StoreItems.json";
         const eventListURL = "https://raw.githubusercontent.com/insanityseanboy/item-list/master/StoreEvents.json";
     </script>
 </head>
